--- a/client-app/src/app/app.component.html
+++ b/client-app/src/app/app.component.html
@@ -1,62 +1,28 @@
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<div data-aos="fade-up" data-aos-anchor-placement="bottom-center">
-    <h1>SALOM</h1>
-</div>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
-<P>SALOM</P>
+<form>
+    <div class="form">
+        <div class="brand">
+            <img src="https://images-platform.99static.com//3XRYufZMWht0KxKsfziqpiDDxLw=/115x120:857x862/fit-in/500x500/99designs-contests-attachments/116/116335/attachment_116335374"
+                alt="brand">
+        </div>
+        <div class="title">
+            <b>
+                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Nulla illo molestias repellat.</p>
+            </b>
+        </div>
+        <div class="headline">
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam deleniti et culpa earum omnis neque
+                officia
+                doloremque quis ipsam! Consequatur quaerat praesentium suscipit fuga quo eaque expedita at cumque
+                aspernatur.</p>
+        </div>
+        <div class="form-group">
+            <div class="form-control">
+                <label for=""></label>
+                <input type="text" name="username">
+            </div>
+        </div>
+        <div class="action">
+            <button>SignUp</button>
+        </div>
+    </div>
+</form>
