--- a/client-app/src/styles.scss
+++ b/client-app/src/styles.scss
@@ -1,18 +1,37 @@
 /* You can add global styles to this file, and also import other style files */
+@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200");
+@import url("https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0");
 :root {
 // colors
-    --primary-l: #ff3333;
-    --primary: #ff1717;
-    --primary-d: #b30000;
+    --primary-l: rgb(81, 149, 238);
+    --primary: hsl(214deg 84% 56%);
+    --primary-d: rgb(13, 106, 228);
 
-
-    --secondary-l: #eeeeee;
-    --secondary: #e2e2e2;
-    --secondary-d: #888888;
+    --secondary-l: rgb(194, 191, 191);
+    --secondary: hsl(0deg 0% 49%);
+    --secondary-d: hsl(260deg 8% 15%);
 
 // font size
     --font-size:16px;
-    --radius-size:24px
+    --border-radius:24px
 }
-
+*{
+    padding: 0;
+    margin: 0;
+    box-sizing: border-box;
+}
+p,a,div,input{
+    font-family: sans-serif;
+}
+a{
+    color: var(--primary-l);
+    text-decoration: none;
+}
+.modal{
+    padding-top: 3%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
 
