--- a/client-app/src/app/navbar/navbar.component.scss
+++ b/client-app/src/app/navbar/navbar.component.scss
@@ -17,6 +17,7 @@
             right: 60px;
             top: 18px;
             .drop-down-header{
+                width: 144px;
                 user-select: none;
                 cursor: pointer;
                 display: flex;
