--- a/client-app/src/app/edit/edit.component.html
+++ b/client-app/src/app/edit/edit.component.html
@@ -1,1 +1,65 @@
-<div class="center">edit works!</div>
+<div class="center">
+    <div class="container">
+        <p><a routerLink="../me">&lt; Back</a></p>
+        <form (submit)="OnSubmit()">
+            <div class="table">
+                <table>
+                    <tr>
+                        <td>
+                            <h1>Change Info</h1>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td> <img [src]="me.ImgUrl" alt=""> Photo</td>
+
+                    </tr>
+                    <tr>
+                        <td>
+                            <p>Name</p>
+                            <input placeholder="Enter your name" type="text">
+                        </td>
+
+                    </tr>
+                    <tr>
+                        <td>
+                            <p>Bio</p>
+                            <textarea cols="25" rows="3"  placeholder="Enter your Bio" type="text"> </textarea>
+                        </td>
+
+                    </tr>
+                    <tr>
+                        <td>
+                            <p>Phone</p>
+                            <input placeholder="Enter your Phone" type="text">
+                        </td>
+
+                    </tr>
+                    <tr>
+                        <td>
+                            <p>Email</p>
+                            <input placeholder="Enter your Email" type="text">
+                        </td>
+
+                    </tr>
+                    <tr>
+                        <td>
+                            <p>Password</p>
+                            <input placeholder="Enter your Password" type="text">
+                        </td>
+
+                    </tr>
+                    <tr>
+                        <td>
+                            <button class="btn primary">Save</button>
+                        </td>
+
+                    </tr>
+                </table>
+            </div>
+        </form>
+        <div class="left-right form-footer">
+            <p>created by:Samandar02</p>
+            <p>dev.io</p>
+        </div>
+    </div>
+</div>
