--- a/client-app/src/app/app.component.html
+++ b/client-app/src/app/app.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="isSignedIn">
+<ng-container *ngIf="!isSignedIn">
     <app-navbar></app-navbar>
 </ng-container>
 <router-outlet></router-outlet>
