--- a/client-app/src/app/edit/edit.component.scss
+++ b/client-app/src/app/edit/edit.component.scss
@@ -3,10 +3,43 @@
 table{
     width: 100%;
     text-align: start;
-    img{
+    .image{
         width: 60px;
         height: 60px;
-        background-color: rgba($color: #000000, $alpha: 0.2);
+        position: relative;
+        border-radius: 24px;
+        background-color: black;
+        user-select: none;
+        cursor: pointer;
+        span{
+            color: white;
+            left: 18px;    
+            top: 12px;
+            position: absolute;
+            z-index: 1;
+        }
+        p{
+            color: white;
+            z-index: 1;
+            position: absolute;
+            bottom: -2px;
+            left: 8px;
+        }
+        img{
+            filter: brightness(0.5);
+            position: absolute;
+            left: 0;
+            width: 60px;
+            height: 60px;
+        }
+        input[type="file"]{
+            opacity: 0;
+            position: absolute;
+            width: 60px;
+            height: 60px;
+            z-index: 2;
+
+        }
     }
     tr{
         td{
