--- a/client-app/src/app/navbar/navbar.component.scss
+++ b/client-app/src/app/navbar/navbar.component.scss
@@ -29,12 +29,16 @@
                 }
             }
             .drop-down-items{
+                &.removed{
+                    display: none;
+                }
                 border-radius: 24px;
                 box-shadow: 2px 2px 12px rgba(rgb(105, 105, 105),.3);
                 top: 12px;
                 padding: 12px;
                 position: relative;
                 bottom: 10px;
+                background-color: white;
                 .drop-down-item{
                     padding: 8px;
                     margin: 4px 1px;
